# avera

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  AVERA_Outreach_Emails.docx  AVERA_Pitch_Automotive.pptx  AVERA_Pitch_Aviation.pptx  AVERA_Pitch_Deck.docx  AVERA_Pitch_Medical.pptx  AVERA_Pitch_Railway.pptx  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.action  Dockerfile.cli  Dockerfile.demo  LICENSE  README.md  SECURITY.md  action-entrypoint.sh  action.yml  avera.config.json  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements-deploy.txt  requirements.txt  start_demo.sh
.capy/: REVIEW.md
.claude/: settings.json
.github/: pull_request_template.md
.taskmaster/: config.json
00_AGENT_MENU/: ACTIVE_TASK.md  PROJECT_MAP.md  ROUTER.md  SAFETY_RULES.md  TASK_TYPES.md
benchmark/: README.md  reproduce.sh
demo/: README.md  app.py
deploy/: streamlit_config.toml
docs/: AVERA_ACTION_PLAN_2026_05_07.md  AVERA_ADAPTED_EVIDENCE_PILOT_PACKET.md  AVERA_ADAPTED_EVIDENCE_RUNBOOK.md  AVERA_ADAPTED_ONE_PAGER.md  AVERA_ADAPTED_OUTREACH_PACKET.md  AVERA_ADAPTED_PILOT_BUNDLE.md  AVERA_ADAPTED_PILOT_SCRIPT_10_MIN.md  AVERA_ADAPTED_SHOWCASE.html  AVERA_ADAPTED_VISUAL_PACKET.md  AVERA_ADAS_SHOWCASE.html  AVERA_ADVERSARIAL_HARDENING.md  AVERA_AI_EXTENSION.md  AVERA_ARCHITECTURE.md  AVERA_BLIND_REPLAY.md  AVERA_CASE_STUDY_BMS.md  AVERA_CLASSIFICATION_POLICY.md  AVERA_CORE_ARCHITECTURE.md  AVERA_DECISION_ENGINE.md  AVERA_DECISION_LOG.md  AVERA_DEMO_IMPLEMENTATION_PLAN.md  AVERA_DEMO_NARRATIVE_BMS_FAST_CHARGE.md  AVERA_DEMO_SCENARIO_BMS.md  AVERA_DEMO_SHELL.md  AVERA_DEPLOY_STATUS.md  AVERA_DESIGN_PARTNER_PACKET.md  AVERA_DESIGN_PARTNER_PLAYBOOK.md  AVERA_DISCOVERY_FINDINGS.md  AVERA_DOMAIN_MODULES.md  AVERA_ENGINEERING_MEMORY.md  AVERA_ENGLISH_FIRST_CONTACT_BUNDLE.md  AVERA_EVIDENCE_MANIFEST.md  AVERA_EVIDENCE_MODEL.md  (+68 more)
(+412 files in other folders)
