[project]
name = "avera"
version = "0.1.0"
description = "AI Change Verification Infrastructure for Safety-Critical Systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "AVERA Engineering", email = "mgaloyan79@gmail.com" }
]
keywords = [
    "automotive",
    "functional-safety",
    "ISO26262",
    "AI-verification",
    "change-analysis",
    "evidence",
    "ADAS",
    "regression-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/averaeng/avera"
Documentation = "https://github.com/averaeng/avera/blob/main/docs/AVERA_AI_EXTENSION.md"
Repository = "https://github.com/averaeng/avera"
"Bug Tracker" = "https://github.com/averaeng/avera/issues"

[project.scripts]
avera = "avera.__main__:main"
avera-api = "avera_api.main:main"

[project.optional-dependencies]
demo = ["streamlit>=1.44,<2"]
dev = ["pytest>=8.0", "pytest-subtests>=0.11", "httpx>=0.27"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
